# gated-bot

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
hooks/: pre_tool_gate.py
k8s/: generate-kubeconfig.sh  sysop-rbac.yaml
persona/: CLAUDE.md
persona/.claude/: settings.json
sysop/: __init__.py  audit.py  bot.py  config.py  gates.py  main.py  redact.py  session.py
tests/: test_audit.py  test_config.py  test_gates.py  test_hook_bridge.py  test_redact.py  test_session.py  test_status_message.py
